// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input.* /> <Input.Checkbox /> should render correctly with all required props 1`] = `
<span
  className="Input-root-0-1-1 Input-checkbox-0-1-4 required"
>
  <label
    htmlFor="foo"
  >
    <span
      className="Input-label-0-1-3"
    >
      Foo label
    </span>
    <input
      className="Input-input-0-1-2"
      defaultChecked={true}
      disabled={true}
      id="foo"
      name="foo"
      required={true}
      theme={
        Object {
          "background": Object {
            "block": "#F7F6F5",
            "item": "#F7F6F5",
            "main": "#FFFFFF",
            "page": "#FFFFFF",
            "sidebar": "#19222F",
          },
          "colors": Object {
            "base": "#BDBDBD",
            "black": "#000000",
            "dark": "#5F5E66",
            "invalid": "red",
            "light": "#DEDDDC",
            "lightest": "#F7F6F5",
            "primary": "#4797F4",
            "primaryDark": "#2E7EDB",
            "primaryLight": "#61B1FF",
            "secondary": "#19222F",
            "valid": "#58C087",
            "white": "#FFFFFF",
          },
          "fontFamily": "Larsseit, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontFamilyBold": "Larsseit_Bold, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontFamilyMed": "Larsseit_Medium, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSize": Object {
            "base": "15px",
            "h1": "28px",
            "h2": "22px",
            "h3": "20px",
            "h4": "18px",
            "h5": "18px",
            "h6": "16px",
            "large": "20px",
            "small": "13px",
            "text": "16px",
          },
        }
      }
      type="checkbox"
    />
  </label>
</span>
`;

exports[`<Input.* /> <Input.Email /> should render correctly with all required props 1`] = `
<span
  className="Input-root-0-1-1 Input-email-0-1-5"
>
  <label
    htmlFor="foo"
  >
    <span
      className="Input-label-0-1-3"
    >
      Foo label
    </span>
    <input
      className="Input-input-0-1-2"
      id="foo"
      name="foo"
      theme={
        Object {
          "background": Object {
            "block": "#F7F6F5",
            "item": "#F7F6F5",
            "main": "#FFFFFF",
            "page": "#FFFFFF",
            "sidebar": "#19222F",
          },
          "colors": Object {
            "base": "#BDBDBD",
            "black": "#000000",
            "dark": "#5F5E66",
            "invalid": "red",
            "light": "#DEDDDC",
            "lightest": "#F7F6F5",
            "primary": "#4797F4",
            "primaryDark": "#2E7EDB",
            "primaryLight": "#61B1FF",
            "secondary": "#19222F",
            "valid": "#58C087",
            "white": "#FFFFFF",
          },
          "fontFamily": "Larsseit, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontFamilyBold": "Larsseit_Bold, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontFamilyMed": "Larsseit_Medium, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSize": Object {
            "base": "15px",
            "h1": "28px",
            "h2": "22px",
            "h3": "20px",
            "h4": "18px",
            "h5": "18px",
            "h6": "16px",
            "large": "20px",
            "small": "13px",
            "text": "16px",
          },
        }
      }
      type="email"
    />
  </label>
</span>
`;

exports[`<Input.* /> <Input.File /> should render correctly with all required props 1`] = `
<span
  className="Input-root-0-1-1 Input-file-0-1-6"
>
  <label
    htmlFor="foo"
  >
    <span
      className="Input-label-0-1-3"
    >
      Foo label
    </span>
    <input
      className="Input-input-0-1-2"
      id="foo"
      name="foo"
      theme={
        Object {
          "background": Object {
            "block": "#F7F6F5",
            "item": "#F7F6F5",
            "main": "#FFFFFF",
            "page": "#FFFFFF",
            "sidebar": "#19222F",
          },
          "colors": Object {
            "base": "#BDBDBD",
            "black": "#000000",
            "dark": "#5F5E66",
            "invalid": "red",
            "light": "#DEDDDC",
            "lightest": "#F7F6F5",
            "primary": "#4797F4",
            "primaryDark": "#2E7EDB",
            "primaryLight": "#61B1FF",
            "secondary": "#19222F",
            "valid": "#58C087",
            "white": "#FFFFFF",
          },
          "fontFamily": "Larsseit, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontFamilyBold": "Larsseit_Bold, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontFamilyMed": "Larsseit_Medium, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSize": Object {
            "base": "15px",
            "h1": "28px",
            "h2": "22px",
            "h3": "20px",
            "h4": "18px",
            "h5": "18px",
            "h6": "16px",
            "large": "20px",
            "small": "13px",
            "text": "16px",
          },
        }
      }
      type="file"
    />
  </label>
</span>
`;

exports[`<Input.* /> <Input.Hidden /> should render correctly with all required props 1`] = `
<span
  className="Input-root-0-1-1 Input-hidden-0-1-7"
>
  <label
    htmlFor="foo"
  >
    <span
      className="Input-label-0-1-3"
    >
      Foo label
    </span>
    <input
      className="Input-input-0-1-2"
      id="foo"
      name="foo"
      theme={
        Object {
          "background": Object {
            "block": "#F7F6F5",
            "item": "#F7F6F5",
            "main": "#FFFFFF",
            "page": "#FFFFFF",
            "sidebar": "#19222F",
          },
          "colors": Object {
            "base": "#BDBDBD",
            "black": "#000000",
            "dark": "#5F5E66",
            "invalid": "red",
            "light": "#DEDDDC",
            "lightest": "#F7F6F5",
            "primary": "#4797F4",
            "primaryDark": "#2E7EDB",
            "primaryLight": "#61B1FF",
            "secondary": "#19222F",
            "valid": "#58C087",
            "white": "#FFFFFF",
          },
          "fontFamily": "Larsseit, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontFamilyBold": "Larsseit_Bold, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontFamilyMed": "Larsseit_Medium, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSize": Object {
            "base": "15px",
            "h1": "28px",
            "h2": "22px",
            "h3": "20px",
            "h4": "18px",
            "h5": "18px",
            "h6": "16px",
            "large": "20px",
            "small": "13px",
            "text": "16px",
          },
        }
      }
      type="hidden"
    />
  </label>
</span>
`;

exports[`<Input.* /> <Input.Number /> should render correctly with all required props 1`] = `
<span
  className="Input-root-0-1-1 Input-number-0-1-8"
>
  <label
    htmlFor="foo"
  >
    <span
      className="Input-label-0-1-3"
    >
      Foo label
    </span>
    <input
      className="Input-input-0-1-2"
      id="foo"
      max={80}
      name="foo"
      theme={
        Object {
          "background": Object {
            "block": "#F7F6F5",
            "item": "#F7F6F5",
            "main": "#FFFFFF",
            "page": "#FFFFFF",
            "sidebar": "#19222F",
          },
          "colors": Object {
            "base": "#BDBDBD",
            "black": "#000000",
            "dark": "#5F5E66",
            "invalid": "red",
            "light": "#DEDDDC",
            "lightest": "#F7F6F5",
            "primary": "#4797F4",
            "primaryDark": "#2E7EDB",
            "primaryLight": "#61B1FF",
            "secondary": "#19222F",
            "valid": "#58C087",
            "white": "#FFFFFF",
          },
          "fontFamily": "Larsseit, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontFamilyBold": "Larsseit_Bold, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontFamilyMed": "Larsseit_Medium, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSize": Object {
            "base": "15px",
            "h1": "28px",
            "h2": "22px",
            "h3": "20px",
            "h4": "18px",
            "h5": "18px",
            "h6": "16px",
            "large": "20px",
            "small": "13px",
            "text": "16px",
          },
        }
      }
      type="number"
    />
  </label>
</span>
`;

exports[`<Input.* /> <Input.Password /> should render correctly with all required props 1`] = `
<span
  className="Input-root-0-1-1 Input-password-0-1-9"
>
  <label
    htmlFor="foo"
  >
    <span
      className="Input-label-0-1-3"
    >
      Foo label
    </span>
    <input
      className="Input-input-0-1-2"
      id="foo"
      name="foo"
      theme={
        Object {
          "background": Object {
            "block": "#F7F6F5",
            "item": "#F7F6F5",
            "main": "#FFFFFF",
            "page": "#FFFFFF",
            "sidebar": "#19222F",
          },
          "colors": Object {
            "base": "#BDBDBD",
            "black": "#000000",
            "dark": "#5F5E66",
            "invalid": "red",
            "light": "#DEDDDC",
            "lightest": "#F7F6F5",
            "primary": "#4797F4",
            "primaryDark": "#2E7EDB",
            "primaryLight": "#61B1FF",
            "secondary": "#19222F",
            "valid": "#58C087",
            "white": "#FFFFFF",
          },
          "fontFamily": "Larsseit, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontFamilyBold": "Larsseit_Bold, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontFamilyMed": "Larsseit_Medium, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSize": Object {
            "base": "15px",
            "h1": "28px",
            "h2": "22px",
            "h3": "20px",
            "h4": "18px",
            "h5": "18px",
            "h6": "16px",
            "large": "20px",
            "small": "13px",
            "text": "16px",
          },
        }
      }
      type="password"
    />
  </label>
</span>
`;

exports[`<Input.* /> <Input.Radio /> should render correctly with all required props 1`] = `
<span
  className="Input-root-0-1-1 Input-radio-0-1-10"
>
  <label
    htmlFor="foo"
  >
    <span
      className="Input-label-0-1-3"
    >
      Foo label
    </span>
    <input
      className="Input-input-0-1-2"
      id="foo"
      name="foo"
      theme={
        Object {
          "background": Object {
            "block": "#F7F6F5",
            "item": "#F7F6F5",
            "main": "#FFFFFF",
            "page": "#FFFFFF",
            "sidebar": "#19222F",
          },
          "colors": Object {
            "base": "#BDBDBD",
            "black": "#000000",
            "dark": "#5F5E66",
            "invalid": "red",
            "light": "#DEDDDC",
            "lightest": "#F7F6F5",
            "primary": "#4797F4",
            "primaryDark": "#2E7EDB",
            "primaryLight": "#61B1FF",
            "secondary": "#19222F",
            "valid": "#58C087",
            "white": "#FFFFFF",
          },
          "fontFamily": "Larsseit, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontFamilyBold": "Larsseit_Bold, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontFamilyMed": "Larsseit_Medium, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSize": Object {
            "base": "15px",
            "h1": "28px",
            "h2": "22px",
            "h3": "20px",
            "h4": "18px",
            "h5": "18px",
            "h6": "16px",
            "large": "20px",
            "small": "13px",
            "text": "16px",
          },
        }
      }
      type="radio"
    />
  </label>
</span>
`;

exports[`<Input.* /> <Input.Switch /> should render correctly with all required props 1`] = `
<span
  className="Input-root-0-1-1 Input-switch-0-1-11"
>
  <label
    htmlFor="foo"
  >
    <span
      className="Input-label-0-1-3"
    >
      Foo label
    </span>
    <input
      className="Input-input-0-1-2"
      id="foo"
      name="foo"
      theme={
        Object {
          "background": Object {
            "block": "#F7F6F5",
            "item": "#F7F6F5",
            "main": "#FFFFFF",
            "page": "#FFFFFF",
            "sidebar": "#19222F",
          },
          "colors": Object {
            "base": "#BDBDBD",
            "black": "#000000",
            "dark": "#5F5E66",
            "invalid": "red",
            "light": "#DEDDDC",
            "lightest": "#F7F6F5",
            "primary": "#4797F4",
            "primaryDark": "#2E7EDB",
            "primaryLight": "#61B1FF",
            "secondary": "#19222F",
            "valid": "#58C087",
            "white": "#FFFFFF",
          },
          "fontFamily": "Larsseit, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontFamilyBold": "Larsseit_Bold, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontFamilyMed": "Larsseit_Medium, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSize": Object {
            "base": "15px",
            "h1": "28px",
            "h2": "22px",
            "h3": "20px",
            "h4": "18px",
            "h5": "18px",
            "h6": "16px",
            "large": "20px",
            "small": "13px",
            "text": "16px",
          },
        }
      }
      type="checkbox"
    />
  </label>
</span>
`;

exports[`<Input.* /> <Input.Tel /> should render correctly with all required props 1`] = `
<span
  className="Input-root-0-1-1 Input-tel-0-1-12"
>
  <label
    htmlFor="foo"
  >
    <span
      className="Input-label-0-1-3"
    >
      Foo label
    </span>
    <input
      className="Input-input-0-1-2"
      id="foo"
      name="foo"
      theme={
        Object {
          "background": Object {
            "block": "#F7F6F5",
            "item": "#F7F6F5",
            "main": "#FFFFFF",
            "page": "#FFFFFF",
            "sidebar": "#19222F",
          },
          "colors": Object {
            "base": "#BDBDBD",
            "black": "#000000",
            "dark": "#5F5E66",
            "invalid": "red",
            "light": "#DEDDDC",
            "lightest": "#F7F6F5",
            "primary": "#4797F4",
            "primaryDark": "#2E7EDB",
            "primaryLight": "#61B1FF",
            "secondary": "#19222F",
            "valid": "#58C087",
            "white": "#FFFFFF",
          },
          "fontFamily": "Larsseit, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontFamilyBold": "Larsseit_Bold, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontFamilyMed": "Larsseit_Medium, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSize": Object {
            "base": "15px",
            "h1": "28px",
            "h2": "22px",
            "h3": "20px",
            "h4": "18px",
            "h5": "18px",
            "h6": "16px",
            "large": "20px",
            "small": "13px",
            "text": "16px",
          },
        }
      }
      type="tel"
    />
  </label>
</span>
`;

exports[`<Input.* /> <Input.Text /> should render correctly with all required props 1`] = `
<span
  className="Input-root-0-1-1 Input-text-0-1-13"
>
  <label
    htmlFor="foo"
  >
    <span
      className="Input-label-0-1-3"
    >
      Foo label
    </span>
    <input
      className="Input-input-0-1-2"
      id="foo"
      name="foo"
      theme={
        Object {
          "background": Object {
            "block": "#F7F6F5",
            "item": "#F7F6F5",
            "main": "#FFFFFF",
            "page": "#FFFFFF",
            "sidebar": "#19222F",
          },
          "colors": Object {
            "base": "#BDBDBD",
            "black": "#000000",
            "dark": "#5F5E66",
            "invalid": "red",
            "light": "#DEDDDC",
            "lightest": "#F7F6F5",
            "primary": "#4797F4",
            "primaryDark": "#2E7EDB",
            "primaryLight": "#61B1FF",
            "secondary": "#19222F",
            "valid": "#58C087",
            "white": "#FFFFFF",
          },
          "fontFamily": "Larsseit, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontFamilyBold": "Larsseit_Bold, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontFamilyMed": "Larsseit_Medium, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSize": Object {
            "base": "15px",
            "h1": "28px",
            "h2": "22px",
            "h3": "20px",
            "h4": "18px",
            "h5": "18px",
            "h6": "16px",
            "large": "20px",
            "small": "13px",
            "text": "16px",
          },
        }
      }
      type="text"
    />
  </label>
</span>
`;

exports[`<Input.* /> <Input.Textarea /> should render correctly with all required props 1`] = `
<span
  className="Input-root-0-1-1 Input-textarea-0-1-14"
>
  <label
    htmlFor="foo"
  >
    <span
      className="Input-label-0-1-3"
    >
      Foo label
    </span>
    <textarea
      className="Input-input-0-1-2"
      id="foo"
      name="foo"
      theme={
        Object {
          "background": Object {
            "block": "#F7F6F5",
            "item": "#F7F6F5",
            "main": "#FFFFFF",
            "page": "#FFFFFF",
            "sidebar": "#19222F",
          },
          "colors": Object {
            "base": "#BDBDBD",
            "black": "#000000",
            "dark": "#5F5E66",
            "invalid": "red",
            "light": "#DEDDDC",
            "lightest": "#F7F6F5",
            "primary": "#4797F4",
            "primaryDark": "#2E7EDB",
            "primaryLight": "#61B1FF",
            "secondary": "#19222F",
            "valid": "#58C087",
            "white": "#FFFFFF",
          },
          "fontFamily": "Larsseit, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontFamilyBold": "Larsseit_Bold, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontFamilyMed": "Larsseit_Medium, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSize": Object {
            "base": "15px",
            "h1": "28px",
            "h2": "22px",
            "h3": "20px",
            "h4": "18px",
            "h5": "18px",
            "h6": "16px",
            "large": "20px",
            "small": "13px",
            "text": "16px",
          },
        }
      }
      type="textarea"
    />
  </label>
</span>
`;
